sandbox/output
StrategyFactory.java:3: error: cannot find symbol
        return new SulfurasStrategy();
                   ^
  symbol:   class SulfurasStrategy
  location: class StrategyFactory
1 error
